force-app/main/default/objects/WorkOrder/fields/Exclusion_Restriction_Status__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Restriction_Status__c</fullName>
    <description>Restriction Status of the related Exclusion. Used to gate the Revoke Immediately button visibility (hidden once the exclusion is Revoked).</description>
    <formula>TEXT(Exl_Exclusion__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclusion Restriction Status</label>
    <type>Text</type>
</CustomField>