force-app/main/default/objects/WorkOrder/fields/Exl_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Exl_Exclusion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the exclusion record to support revocation process</description>
    <label>Exclusion</label>
    <referenceTo>Exl_Exclusion__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>