force-app/main/default/objects/WorkOrder/fields/Exl_Nextbutton__c.field-meta.xml
<CustomField>
    <fullName>Exl_Nextbutton__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nextbutton</label>
    <length>255</length>
    <type>Text</type>
</CustomField>