force-app/main/default/objects/WorkOrder/fields/Immediate_Revocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Revocation_Date__c</fullName>
    <description>Revocation Date captured on the Revoke Immediately request.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Immediate Revocation Date</label>
    <type>Date</type>
</CustomField>