force-app/main/default/objects/WorkOrder/fields/Immediate_Revocation_Decided_By__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Revocation_Decided_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User (approver) who approved or rejected the immediate revocation request.</description>
    <label>Immediate Revocation Decided By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Immediate_Revocation_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>