force-app/main/default/objects/WorkOrder/fields/Immediate_Revocation_Decided_On__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Revocation_Decided_On__c</fullName>
    <description>Date/time the approver approved or rejected the immediate revocation request.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Immediate Revocation Decided On</label>
    <type>DateTime</type>
</CustomField>