force-app/main/default/objects/WorkOrder/fields/Immediate_Revocation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Revocation_Reason__c</fullName>
    <description>Revocation Reason captured on the Revoke Immediately request.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Immediate Revocation Reason</label>
    <type>TextArea</type>
</CustomField>