force-app/main/default/objects/WorkOrder/fields/Immediate_Revocation_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Revocation_Rejection_Reason__c</fullName>
    <description>Reason provided by the approver when an immediate revocation request is rejected.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Immediate Revocation Rejection Reason</label>
    <type>TextArea</type>
</CustomField>