force-app/main/default/objects/WorkOrder/fields/Immediate_Revocation_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Revocation_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who submitted the Revoke Immediately request. Notified on rejection.</description>
    <label>Immediate Revocation Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Immediate_Revocation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>