force-app/main/default/objects/WorkOrder/fields/Immediate_Revocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Revocation_Status__c</fullName>
    <description>Tracks the immediate revocation request lifecycle: Requested (pending approval), Approved, Rejected.</description>
    <label>Immediate Revocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>