force-app/main/default/objects/WorkOrder/fields/isButton__c.field-meta.xml
<CustomField>
    <fullName>isButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isButton</label>
    <type>Checkbox</type>
</CustomField>