force-app/main/default/objects/WorkOrder/fields/Voluntary__c.field-meta.xml
<CustomField>
    <fullName>Voluntary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if the prevention was voluntary.</description>
    <label>Voluntary</label>
    <type>Checkbox</type>
</CustomField>