force-app/main/default/objects/WorkOrder/fields/WOLI_Count__c.field-meta.xml
<CustomField>
    <fullName>WOLI_Count__c</fullName>
    <label>WOLI_Count</label>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>