force-app/main/default/objects/WorkOrder/fields/WorkOrderType__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderType__c</fullName>
    <description>Type of operational action.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Order Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>