force-app/main/default/objects/WorkOrder/validationRules/ExlCannotDeleteWOLI.validationRule-meta.xml
<ValidationRule>
    <fullName>ExlCannotDeleteWOLI</fullName>
    <active>true</active>
    <description>Users cannot delete WorkOrderLineItem</description>
    <errorConditionFormula>PRIORVALUE(WOLI_Count__c) &gt; WOLI_Count__c
&amp;&amp; $Profile.Name != &apos;System Administrator&apos;
&amp;&amp; $Permission.Exl_ReadOnlyUser_CP</errorConditionFormula>
    <errorMessage>You don’t have permission to delete this record. For help, contact your Salesforce admin.</errorMessage>
</ValidationRule>