force-app/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Case</columns>
    <columns>WorkOrderType__c</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
</ListView>